    * Added new painters "Service check command expanded" and
      "Host check command expanded"
    * FIX: Corrected garbled description for sorter "Service Performance data" 
    * Dashboard globes can now be filtered by host_contact_group/service_contact_group
    * Dashboard "iframe" attribute can now be rendered dynamically using the
      "iframefunc" attribute in the dashlet declaration

    Livestatus:
    * Added new table statehist, used for SLA queries
    * Added new column check_command_expanded in table hosts
    * Added new column check_command_expanded in table services
    * New columns livestatus_threads, livestatus_{active,queued}_connections

    BI:
    * Added missing localizations
    * Added option bi_precompile_on_demand to split compilations of
      the aggregations in several fragments. If possible only the needed
      aggregations are compiled to reduce the time a user has to wait for
      BI based view. This optimizes BI related views which display
      information for a specific list of hosts or aggregation groups.
    * Added new config option bi_compile_log to collect statistics about
      aggregation compilations
    * Aggregations can now be part of more than one aggregation group
      (just configure a list of group names instead of a group name string)
    * Correct representation of (!), (!!) and (?) markers in check output
    * Corrected representation of assumed state in box layout
    * Feature: Using parameters for hosttags

    WATO:
    * Added progress indicator in single site WATO "Activate Changes"
    * Users & Contacts: Case-insensitive sorting of 'Full name' column
    * ntp/ntp.time parameters are now configurable via WATO
    * FIX: Implemented basic non HTTP 200 status code response handling in interactive
           progress dialogs (e.g. bulk inventory mode)
    * FIX: Fixed editing of icon_image rules
    * Added support of locked hosts and folders ( created by CMDB )